Adding the HR dataset

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ limitations under the License.
           <div class="dataset" title="CSV Dummy 1 (Classification)">
             <canvas class="data-thumbnail" data-dataset="csv1"></canvas>
           </div>
-          <div class="dataset" title="CSV Dummy 2 (Classification)">
-            <canvas class="data-thumbnail" data-dataset="csv2"></canvas>
+          <div class="dataset" title="HR diagram (Classification)">
+            <canvas class="data-thumbnail" data-dataset="hr"></canvas>
           </div>
           <div class="dataset" title="Plane">
             <canvas class="data-thumbnail" data-regDataset="reg-plane"></canvas>
@@ -433,7 +433,7 @@ limitations under the License.
           'ds.gauss': 'Gaussian',
           'ds.spiral': 'Spiral',
           'ds.csv1': 'CSV Dummy 1 (Classification)',
-          'ds.csv2': 'CSV Dummy 2 (Classification)',
+          'ds.hr': 'HR diagram (Classification)',
           'ds.reg-plane': 'Plane',
           'ds.reg-gauss': 'Multi gaussian',
           'ds.reg-csv1': 'CSV Dummy 1 (Regression)',
@@ -484,7 +484,7 @@ limitations under the License.
           'ds.reg-plane': 'Plan',
           'ds.reg-gauss': 'Multi-gaussien',
                     'ds.csv1': 'CSV factice 1 (Classification)',
-                    'ds.csv2': 'CSV factice 2 (Classification)',
+                    'ds.hr': 'Diagramme HR (Classification)',
                     'ds.reg-csv1': 'CSV factice 1 (Régression)',
                     'ds.reg-csv2': 'CSV factice 2 (Régression)',
           'label[for="percTrainData"]': 'Proportion d\u2019apprentissage vs test\u00A0:\u00A0<span class="value">XX</span>%',
@@ -575,7 +575,7 @@ limitations under the License.
         setDsTitle('data-dataset','gauss', mapping['gauss']);
         setDsTitle('data-dataset','spiral', mapping['spiral']);
         setDsTitle('data-dataset','csv1', mapping['csv1']);
-        setDsTitle('data-dataset','csv2', mapping['csv2']);
+        setDsTitle('data-dataset','hr', mapping['hr']);
         setDsTitle('data-regDataset','reg-plane', mapping['reg-plane']);
         setDsTitle('data-regDataset','reg-gauss', mapping['reg-gauss']);
         setDsTitle('data-regDataset','reg-csv1', mapping['reg-csv1']);
