--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ limitations under the License.
             <option value="tanh">Tanh</option>
             <option value="sigmoid">Sigmoid</option>
             <option value="linear">Linear</option>
+            <option value="gelu">GELU</option>
           </select>
         </div>
       </div>
