--- a/index.html
+++ b/index.html
@@ -333,42 +333,12 @@ limitations under the License.
 
   <article id="article-text">
     <div class="l--body">
-      <h2>Um, What Is a Neural Network?</h2>
-      <p>It’s a technique for building a computer program that learns from data. It is based very loosely on how we think the human brain works. First, a collection of software “neurons” are created and connected together, allowing them to send messages to each other. Next, the network is asked to solve a problem, which it attempts to do over and over, each time strengthening the connections that lead to success and diminishing those that lead to failure. For a more detailed introduction to neural networks, Michael Nielsen’s <a href="http://neuralnetworksanddeeplearning.com/index.html">Neural Networks and Deep Learning</a> is a good place to start. For a more technical overview, try <a href="http://www.deeplearningbook.org/">Deep Learning</a> by Ian Goodfellow, Yoshua Bengio, and Aaron Courville.</p>
+      <h2 id="about-title">About this page</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
-
     <div class="l--body">
-      <h2>This Is Cool, Can I Repurpose It?</h2>
-      <p>Please do! We’ve open sourced it on <a href="https://github.com/tensorflow/playground">GitHub</a> with the hope that it can make neural networks a little more accessible and easier to learn. You’re free to use it in any way that follows our <a href="https://github.com/tensorflow/playground/blob/master/LICENSE">Apache License</a>. And if you have any suggestions for additions or changes, please <a href="https://github.com/tensorflow/playground/issues">let us know</a>.</p>
-      <p>We’ve also provided some controls below to enable you tailor the playground to a specific topic or lesson. Just choose which features you’d like to be visible below then save <a class="hide-controls-link" href="#">this link</a>, or <a href="javascript:location.reload();">refresh</a> the page.</p>
+      <h2 id="settings-title">Settings</h2>
       <div class="hide-controls"></div>
-    </div>
-
-    <div class="l--body">
-      <h2>What Do All the Colors Mean?</h2>
-      <p>Orange and blue are used throughout the visualization in slightly different ways, but in general orange shows negative values while blue shows positive values.</p>
-      <p>The data points (represented by small circles) are initially colored orange or blue, which correspond to positive one and negative one.</p>
-      <p>In the hidden layers, the lines are colored by the weights of the connections between neurons. Blue shows a positive weight, which means the network is using that output of the neuron as given. An orange line shows that the network is assiging a negative weight.</p>
-      <p>In the output layer, the dots are colored orange or blue depending on their original values. The background color shows what the network is predicting for a particular area. The intensity of the color shows how confident that prediction is.</p>
-    </div>
-
-    <div class="l--body">
-      <h2>What Library Are You Using?</h2>
-      <p>We wrote a tiny neural network <a href="https://github.com/tensorflow/playground/blob/master/src/nn.ts">library</a>
-      that meets the demands of this educational visualization. For real-world applications, consider the
-      <a href="https://www.tensorflow.org/">TensorFlow</a> library.
-      </p>
-    </div>
-
-    <div class="l--body">
-      <h2>Credits</h2>
-      <p>
-        This was created by Daniel Smilkov and Shan Carter.
-        This is a continuation of many people’s previous work — most notably Andrej Karpathy’s <a href="http://cs.stanford.edu/people/karpathy/convnetjs/demo/classify2d.html">convnet.js demo</a>
-        and Chris Olah’s <a href="http://colah.github.io/posts/2014-03-NN-Manifolds-Topology/">articles</a> about neural networks.
-        Many thanks also to D. Sculley for help with the original idea and to Fernanda Viégas and Martin Wattenberg and the rest of the
-        <a href="https://research.google.com/bigpicture/">Big Picture</a> and <a href="https://research.google.com/teams/brain/">Google Brain</a> teams for feedback and guidance.
-      </p>
     </div>
   </article>
 
@@ -415,11 +385,8 @@ limitations under the License.
           'label[for="show-test-data"] .mdl-checkbox__label': 'Show test data',
           'label[for="discretize"] .mdl-checkbox__label': 'Discretize output',
           'label[for="show-bias"] .mdl-checkbox__label': 'Show biases',
-          '#article-text h2:nth-of-type(1)': 'Um, What Is a Neural Network?',
-          '#article-text h2:nth-of-type(2)': 'This Is Cool, Can I Repurpose It?',
-          '#article-text h2:nth-of-type(3)': 'What Do All the Colors Mean?',
-          '#article-text h2:nth-of-type(4)': 'What Library Are You Using?',
-          '#article-text h2:nth-of-type(5)': 'Credits',
+          '#about-title': 'About this page',
+          '#settings-title': 'Settings',
           '.github-link@title': 'Source on GitHub',
           '.links a': 'Source on GitHub',
           '#lang-en@title': 'Switch to English',
@@ -465,11 +432,8 @@ limitations under the License.
           'label[for="show-test-data"] .mdl-checkbox__label': 'Afficher les données de test',
           'label[for="discretize"] .mdl-checkbox__label': 'Discrétiser la sortie',
           'label[for="show-bias"] .mdl-checkbox__label': 'Afficher les biais',
-          '#article-text h2:nth-of-type(1)': 'Euh, qu\u2019est-ce qu\u2019un réseau de neurones\u00A0?',
-          '#article-text h2:nth-of-type(2)': 'C\u2019est génial, puis-je le réutiliser\u00A0?',
-          '#article-text h2:nth-of-type(3)': 'Que signifient toutes ces couleurs\u00A0?',
-          '#article-text h2:nth-of-type(4)': 'Quelle bibliothèque utilisez-vous\u00A0?',
-          '#article-text h2:nth-of-type(5)': 'Crédits',
+          '#about-title': 'À propos de cette page',
+          '#settings-title': 'Paramètres',
           '.github-link@title': 'Code source sur GitHub',
           '.links a': 'Code source sur GitHub',
           '#lang-en@title': 'Basculer en anglais',
