--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ limitations under the License.
   <article id="article-text">
     <div class="l--body">
       <h2 id="about-title">About this page</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>This page is a fork of the <a href="https://playground.tensorflow.org/">tensorflow payground</a> with extra datasets built using astrophysical data. This website is mostly vibecoded as I wanted to see how much AI agents can perform in this context.</p>
     </div>
     <div class="l--body">
       <h2 id="settings-title">Settings</h2>
