--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@ limitations under the License.
       </div>
       <div>
         <div class="ui-percTrainData">
-          <label for="percTrainData">Ratio of training to test data:&nbsp;&nbsp;<span class="value">XX</span>%</label>
+          <label for="percTrainData">Ratio of training to test data:&nbsp;&nbsp;<span class="value">90</span>%</label>
           <p class="slider">
             <input class="mdl-slider mdl-js-slider" type="range" id="percTrainData" min="10" max="90" step="10">
           </p>
         </div>
         <div class="ui-noise">
-          <label for="noise">Noise:&nbsp;&nbsp;<span class="value">XX</span></label>
+          <label for="noise">Noise:&nbsp;&nbsp;<span class="value">10</span></label>
           <p class="slider">
             <input class="mdl-slider mdl-js-slider" type="range" id="noise" min="0" max="50" step="5">
           </p>
         </div>
         <div class="ui-batchSize">
-          <label for="batchSize">Batch size:&nbsp;&nbsp;<span class="value">XX</span></label>
+          <label for="batchSize">Batch size:&nbsp;&nbsp;<span class="value">10</span></label>
           <p class="slider">
             <input class="mdl-slider mdl-js-slider" type="range" id="batchSize" min="1" max="30" step="1">
           </p>
@@ -368,9 +368,9 @@ limitations under the License.
           'ds.reg-gauss': 'Multi gaussian',
           'ds.reg-csv1': 'CSV Dummy 1 (Regression)',
           'ds.reg-csv2': 'CSV Dummy 2 (Regression)',
-          'label[for="percTrainData"]': 'Ratio of training to test data:\u00A0\u00A0<span class="value">XX</span>%',
-          'label[for="noise"]': 'Noise:\u00A0\u00A0<span class="value">XX</span>',
-          'label[for="batchSize"]': 'Batch size:\u00A0\u00A0<span class="value">XX</span>',
+          'label[for="percTrainData"]': 'Ratio of training to test data:\u00A0\u00A0<span class="value">90</span>%',
+          'label[for="noise"]': 'Noise:\u00A0\u00A0<span class="value">10</span>',
+          'label[for="batchSize"]': 'Batch size:\u00A0\u00A0<span class="value">10</span>',
           '#data-regen-button': 'Regenerate',
           '#data-regen-button@title': 'Regenerate data',
           '.column.features h4': 'Features',
@@ -415,9 +415,9 @@ limitations under the License.
                     'ds.hr': 'Diagramme HR (Classification)',
                     'ds.reg-csv1': 'CSV factice 1 (Régression)',
                     'ds.reg-csv2': 'CSV factice 2 (Régression)',
-          'label[for="percTrainData"]': 'Proportion d\u2019apprentissage vs test\u00A0:\u00A0<span class="value">XX</span>%',
-          'label[for="noise"]': 'Bruit\u00A0:\u00A0<span class="value">XX</span>',
-          'label[for="batchSize"]': 'Taille de lot\u00A0:\u00A0<span class="value">XX</span>',
+          'label[for="percTrainData"]': 'Proportion d\u2019apprentissage vs test\u00A0:\u00A0<span class="value">90</span>%',
+          'label[for="noise"]': 'Bruit\u00A0:\u00A0<span class="value">10</span>',
+          'label[for="batchSize"]': 'Taille de lot\u00A0:\u00A0<span class="value">10</span>',
           '#data-regen-button': 'Régénérer',
           '#data-regen-button@title': 'Régénérer les données',
           '.column.features h4': 'Caractéristiques',
